<resources>
    <string name="app_name">WeatherForecastApp1</string>
    <string name="weather_matters_nwe_ve_got_the_details">Weather Matters,\nWe\'ve got the Details</string>
    <string name="design_by_nneat_roots">Design By,\nNeat Roots</string>
    <string name="today">Today</string>
    <string name="_00_00">00:00℃</string>
    <string name="sunny">SUNNY</string>
    <string name="max_00_00">Max : 00:00℃</string>
    <string name="min_00_00">Min : 00:00℃</string>
    <string name="tuesday">Tuesday</string>
    <string name="_25_january_2023">25 January 2023</string>
    <string name="_00">00 %</string>
    <string name="humidity">Humidity</string>
    <string name="_0_00_m_s">0.00 m/s</string>
    <string name="windspeed">Windspeed</string>
    <string name="sunny21">SUNNY</string>
    <string name="conditions">Conditions</string>
    <string name="_00_00_0">00:00</string>
    <string name="sunrise">Sunrise</string>
    <string name="_00_00_9">00:00</string>
    <string name="sunset">Sunset</string>
    <string name="sea">Sea</string>
    <string name="_0000_hpa">0000 hPa</string>
</resources>