<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunny_background"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/search_view_bg"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="Search For A City"
        app:searchIcon="@drawable/search" />

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="15dp"
        android:textSize="20sp"
        android:fontFamily="@font/merriweathersans_medium"
        android:textColor="@color/black"
        app:drawableLeftCompat="@drawable/loctaion"
        app:layout_constraintEnd_toEndOf="@id/searchView1"
        app:layout_constraintStart_toStartOf="@id/searchView1"
        app:layout_constraintTop_toBottomOf="@id/searchView1" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnime1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_1"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/sun" />

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/today"
        android:fontFamily="@font/merriweathersans_bold"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lottieAnime1"
        app:layout_constraintTop_toBottomOf="@id/tv_1" />

    <TextView
        android:id="@+id/temperatureMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_00_00"
        android:fontFamily="@font/merriweathersans_semibold"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_2"
        app:layout_constraintStart_toStartOf="@+id/tv_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_2" />

    <TextView
        android:id="@+id/weatherCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sunny"
        android:fontFamily="@font/merriweathersans_regular"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnime1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnime1" />

    <TextView
        android:id="@+id/tv_minTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_00_00"
        android:fontFamily="@font/merriweathersans_regular"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherCondition" />

    <TextView
        android:id="@+id/tv_maxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_00_00"
        android:fontFamily="@font/merriweathersans_regular"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_minTemp"
        app:layout_constraintStart_toStartOf="@+id/tv_minTemp"
        app:layout_constraintTop_toBottomOf="@+id/tv_minTemp" />

    <TextView
        android:id="@+id/tv_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tuesday"
        android:fontFamily="@font/merriweathersans_bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_maxTemp"
        app:layout_constraintStart_toStartOf="@+id/tv_maxTemp"
        app:layout_constraintTop_toBottomOf="@+id/tv_maxTemp" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:text="@string/_25_january_2023"
        android:fontFamily="@font/merriweathersans_regular"
        app:layout_constraintEnd_toEndOf="@+id/tv_day"
        app:layout_constraintStart_toStartOf="@+id/tv_day"
        app:layout_constraintTop_toBottomOf="@+id/tv_day" />

    <FrameLayout
        android:id="@+id/frameL1"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/cardview_bg1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/cardview_bg1"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/humidity" />

                <TextView
                    android:id="@+id/humidity1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:textColor="@color/black"
                    android:text="@string/_00" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:text="@string/humidity" />
            </LinearLayout>

            <LinearLayout

                android:id="@+id/linearLayout2"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/cardview_bg1"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/wind" />

                <TextView
                    android:id="@+id/windSpeed1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:textColor="@color/black"
                    android:text="@string/_0_00_m_s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textSize="10sp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:text="@string/windspeed" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/cardview_bg1"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/conditions" />

                <TextView
                    android:id="@+id/weatherCondi2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:textColor="@color/black"
                    android:text="@string/sunny21" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textSize="10sp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:text="@string/conditions" />
            </LinearLayout>

            <LinearLayout

                android:id="@+id/linearLayout4"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/cardview_bg1"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sunrise" />

                <TextView
                    android:id="@+id/sunRise1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:textColor="@color/black"
                    android:text="@string/_00_00_0" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textSize="10sp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:text="@string/sunrise" />
            </LinearLayout>

            <LinearLayout

                android:id="@+id/linearLayout5"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/cardview_bg1"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sunset" />

                <TextView
                    android:id="@+id/sunSet1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:textColor="@color/black"
                    android:text="@string/_00_00_9" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textSize="10sp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:text="@string/sunset" />
            </LinearLayout>

            <LinearLayout

                android:id="@+id/linearLayout6"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/cardview_bg1"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sea" />

                <TextView
                    android:id="@+id/seaLevel1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:textColor="@color/black"
                    android:text="@string/_0000_hpa" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textSize="10sp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:text="@string/sea" />
            </LinearLayout>

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:constraint_referenced_ids="linearLayout,linearLayout2,linearLayout3,linearLayout4,linearLayout5,linearLayout6"
                app:flow_maxElementsWrap="3"
                app:flow_wrapMode="chain"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/design_by_nneat_roots"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textAlignment="center"
        android:fontFamily="@font/merriweathersans_medium"
        app:layout_constraintTop_toBottomOf="@id/frameL1"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>